Fixing the vertical shift when going from the authentication to pickemail screen.
* Adding a form_section div for styling.
* Modify for form_section styles to be applied everywhere except mobile.

close #502

--- a/browserid/static/dialog/css/m.css
+++ b/browserid/static/dialog/css/m.css
@@ -102,7 +102,7 @@
     font-size: 14px;
   }
 
-  #content, .pickemail .form_section, .pickemail .inputs, .vertical {
+  #content, .form_section, .pickemail .inputs, .vertical {
     height: auto;
     overflow: visible;
   }
